add_subdirectory(entry)
add_subdirectory(entry_utils)

add_subdirectory(directory)

add_subdirectory(computer)
add_subdirectory(group)
add_subdirectory(orgranizational_unit)
add_subdirectory(user)

add_subdirectory(bind)
add_subdirectory(common)
add_subdirectory(configure)
add_subdirectory(connection_state_machine)
add_subdirectory(search)

add_subdirectory(schema)
add_subdirectory(ldap_syntaxes)

add_subdirectory(anonymous)
add_subdirectory(tls)
add_subdirectory(timeout)
add_subdirectory(reconnect)

add_subdirectory(attributes)

add_subdirectory(request_queue)
add_subdirectory(config_file)
